SERVER-33297 mongos create will make a capped collection with size 0 if not specified